--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,14 @@ services:
         ports:
             - '27017:27017'
         volumes:
-            - './DB/mongodb/database:/data/db'
+            - './Docker/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro'
         restart: unless-stopped
         image: mongo
         container_name: mongodb
         environment:
-          - PUID=1000
-          - PGID=1000
+          MONGO_INITDB_ROOT_USERNAME: sa
+          MONGO_INITDB_ROOT_PASSWORD: cesimanger1234ABC
+          MONGO_INITDB_DATABASE: cesiManger
     sqlserv:
         build:
             context: ./Docker
