--- a/Centrale/package.json
+++ b/Centrale/package.json
@@ -4,12 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.0",
     "mongodb": "^3.6.9",
     "morgan": "^1.10.0",
-    "mssql": "^7.1.3",
-    "tedious": "^11.0.9"
+    "mssql": "^7.1.3"
   },
   "scripts": {
     "start": "node index.js"
