--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,8 @@
 MONGO_USERNAME=sa
 MONGO_PASSWORD=cesimanger1234ABC
 MONGO_PORT=27017
-MONGO_DB=mongodb
+MONGO_HOSTNAME=mongodb
 SQLSERVER_USERNAME=sa
 SQLSERVER_PASSWORD=cesimanger1234ABC
-SQLSERVER_DB=cesiManger
+SQLSERVER_DB=cesimanger
+SQLSERVER_HOSTNAME=sqlserver
