--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
         hostname: sqlserver
         environment:
           - ACCEPT_EULA=Y
-          - SA_PASSWORD=cesimanger1234ABC
+          - SA_PASSWORD=${SQLSERVER_PASSWORD}
           - PUID=1000
           - PGID=1000
         healthcheck:
@@ -58,4 +58,4 @@ services:
       - sqlserv
     environment:
       WAIT_HOSTS: ${SQLSERVER_HOSTNAME}:1433, ${MONGO_HOSTNAME}:27017
-      WAIT_AFTER: 120
+      WAIT_AFTER: 100
