--- a/Centrale/package.json
+++ b/Centrale/package.json
@@ -12,7 +12,7 @@
     "mssql": "^7.1.3"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/app.js"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6"
