--- a/Centrale/Dockerfile
+++ b/Centrale/Dockerfile
@@ -3,6 +3,7 @@ WORKDIR /usr/src/app
 COPY . /usr/src/app
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.9.0/wait /wait
 RUN chmod +x /wait
+RUN npm install -g nodemon
 RUN npm install
 EXPOSE 40253
 CMD "/wait" && "npm" "start"
