--- a/Centrale/package.json
+++ b/Centrale/package.json
@@ -10,10 +10,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
     "morgan": "^1.10.0",
-    "mssql": "^7.1.3"
+    "mssql": "^7.1.3",
+    "nodemon": "^2.0.7"
   },
   "scripts": {
-    "start": "node src/app.js"
+    "start": "nodemon src/app.js --watch /home/node/app "
   },
   "devDependencies": {
     "@babel/core": "^7.14.6"
