--- a/Centrale/package.json
+++ b/Centrale/package.json
@@ -11,7 +11,10 @@
     "mongodb": "^3.6.9",
     "morgan": "^1.10.0",
     "mssql": "^7.1.3",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "scripts": {
     "start": "nodemon src/app.js --watch /home/node/app "
