(WIP) Reorganized controllers and account creation. Errors on some callbacks

--- a/Centrale/Dockerfile
+++ b/Centrale/Dockerfile
@@ -1,6 +1,6 @@
 FROM node
-WORKDIR /usr/src/app
-COPY . /usr/src/app
+WORKDIR /home/node/app
+COPY . /home/node/app
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.9.0/wait /wait
 RUN chmod +x /wait
 RUN npm install -g nodemon
