--- a/Centrale/package.json
+++ b/Centrale/package.json
@@ -12,6 +12,7 @@
     "http-proxy-middleware": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
+    "mongoose": "^5.13.0",
     "morgan": "^1.10.0",
     "mssql": "^7.1.3",
     "nodemon": "^2.0.7",
